--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,29 +1,24 @@
 .app {
-  font-size: 30px;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   width: 661px;
   height: 763px;
-  position: relative;
-  gap: 0px;
-  opacity: 0px;
   background: #c4c4c4;
 }
 
-.search-line {
+.app--position {
+  position: relative;
+}
+
+.search--position {
   position: relative;
   left: 77px;
   top: 62px;
 }
 
-.search-input {
-  font-size: 30px;
+.search__input {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   width: 500px;
   height: 61px;
-  top: 62px;
-  left: 77px;
-  gap: 0px;
-  opacity: 0px;
   border: none;
   font-family: Roboto;
   font-size: 48px;
@@ -33,38 +28,21 @@
   padding-left: 13px;
 }
 
-input.search-input:focus-visible {
+input.search__input:focus-visible {
   outline: none;
 }
 
-.user-prev {
-  display: block;
-  border: 2px solid #000000;
-}
-
-.user-prev:hover {
-  background: #65CDF9;
-}
-
-.selectedList {
-  width: 100%;
-}
-
-.button {
-  width: 20px;
-  height: 20px;
-}
-
-.users {
+.rep--areas {
   padding: 0;
   margin: 0;
 }
 
-.user-prev {
+.rep__item {
+  display: block;
+  border: 2px solid #000000;
   width: 500px;
   height: 44px;
-  border: 2px solid #000000;
-  background: #E3E3E3;
+  background: #e3e3e3;
   font-family: Roboto;
   font-size: 30px;
   font-weight: 400;
@@ -73,26 +51,29 @@ input.search-input:focus-visible {
   padding-left: 13px;
 }
 
-.selectedList {
-  display: block;
-  position: absolute;
-  margin: 0;
-  padding: 0;
-  z-index: 2;
-  list-style-type: none;
+.rep__item:hover {
+  background: #65cdf9;
 }
 
-.item {
+.selected-list {
+  list-style-type: none;
+  max-height: 303px;
+  overflow: auto;
+}
+
+.selected-list--position {
+  position: absolute;
+  top: 388px;
+  left: 74px;
+}
+
+.selected-list__item {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   width: 503px;
   height: 101px;
-  top: 102px;
-  left: -421px;
-  gap: 0px;
   border: 1px solid black;
-  opacity: 0px;
-  background: #E27BEB;
+  background: #e27beb;
   font-family: Roboto;
   font-size: 24px;
   font-weight: 400;
@@ -101,27 +82,11 @@ input.search-input:focus-visible {
   padding: 8px 17px 8px 16px;
 }
 
-.user-dop {
-  margin-top: 40px;
-}
-
-.sel {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-  position: absolute;
-  top: 388px;
-  left: 74px;
-  max-height: 303px;
-  overflow: auto;
-}
-
-.button {
+.selected-list__button {
   width: 46px;
   height: 42px;
   position: relative;
   z-index: 2;
-  background-color: aliceblue;
   background: url("../images/Vector 8.svg") no-repeat;
   -webkit-transform: translate(411px, -65px);
           transform: translate(411px, -65px);
