--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,149 +1,84 @@
 .app {
-    font-size: 30px;
-    flex-wrap: wrap;
     width: 661px;
     height: 763px;
-    position: relative;
-    gap: 0px;
-    opacity: 0px;
     background: #c4c4c4;
 }
-.search-line { 
+.app--position {
+    position: relative;
+}
+
+.search--position{
     position: relative;
     left: 77px;
-    top:62px;
+    top: 62px;
 }
-.users-wrappers{
-    // position: relative;
-    // left: 77px;
-    // top:62px;
-    // z-index: 2;
-}
-.search-input {
-    font-size: 30px;
+.search__input {
+    box-sizing:border-box;
     width: 500px;
-height: 61px;
-top: 62px;
-left: 77px;
-gap: 0px;
-opacity: 0px;
-border: none;
-font-family: Roboto;
-font-size: 48px;
-font-weight: 400;
-line-height: 56.25px;
-text-align: left;
-padding-left: 13px;
+    height: 61px;
+    border: none;
+    font-family: Roboto;
+    font-size: 48px;
+    font-weight: 400;
+    line-height: 56.25px;
+    text-align: left;
+    padding-left: 13px;
 }
-input.search-input:focus-visible {
+input.search__input:focus-visible {
     outline: none;
-    // background:blue
-}
-// .title {
-//     width: 100%;
-//     text-align: center;
-// }
-// .search-line {
-    
-//     // width: 100%;
-//     // text-align: center;
-// }
-.user-prev {
-    display: block;
-    // border: solid 1px red;
-    border: 2px solid #000000
-}
-.user-prev:hover {
-    background: #65CDF9;
-}
-.selectedList {
-    width: 100%;
-}
-.button {
-    width: 20px;
-    height: 20px;
 }
 
-.users {
-    // width: 500px;
-    // position: relative;
+.rep--areas {
     padding: 0;
     margin: 0;
-   
-    // top: 388px;
-    
 }
-.user-prev {
-    width: 500px;
-    height: 44px;  
-    border: 2px solid #000000;
-    background: #E3E3E3;
-    font-family: Roboto;
-font-size: 30px;
-font-weight: 400;
-line-height: 35.16px;
-text-align: left;
-padding-left: 13px;
-
-}
-.selectedList{
+.rep__item {
     display: block;
-    position: absolute;
-    margin: 0;
-    padding:0;
-    
-    z-index: 2;
-    list-style-type: none;
+    border: 2px solid #000000;
+    width: 500px;
+    height: 44px;
+    background: #e3e3e3;
+    font-family: Roboto;
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 35.16px;
+    text-align: left;
+    padding-left: 13px;
 }
-.item {
-    box-sizing: border-box;
-    width: 503px;
-height: 101px;
-top: 102px;
-left: -421px;
-gap: 0px;
-border: 1px solid black;
-opacity: 0px;
-background: #E27BEB;
-font-family: Roboto;
-font-size: 24px;
-font-weight: 400;
-line-height: 28.13px;
-text-align: left;
-padding: 8px 17px 8px 16px;
-
+.rep__item:hover {
+    background: #65cdf9;
 }
 
-.user-dop {
-    margin-top: 40px;
-}
-.sel {
-    // margin-top: 100px;
-    margin: 0;
-    padding:0;
+.selected-list {
     list-style-type: none;
-    position: absolute;
-    top: 388px;
-    left: 74px;
     max-height: 303px;
     overflow: auto;
 }
-// .button {
-//     display: none;
-// }
-.button {
-    // display: inline-block;
-    // content: "\00d7";
+.selected-list--position {
+    position: absolute;
+    top: 388px;
+    left: 74px;
+}
+
+.selected-list__item {
+    box-sizing: border-box;
+    width: 503px;
+    height: 101px;
+    border: 1px solid black;
+    background: #e27beb;
+    font-family: Roboto;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 28.13px;
+    text-align: left;
+    padding: 8px 17px 8px 16px;
+}
+
+.selected-list__button {
     width: 46px;
     height: 42px;
     position: relative;
-    // transform: translate(250px, -20px);
     z-index: 2;
-    background-color: aliceblue;
-    // width: 100px
     background: url("../images/Vector\ 8.svg") no-repeat;
-    transform: translate(411px, -65px)
-}
-.button::after {
-    // content: "\00d7"
+    transform: translate(411px, -65px);
 }
